--- a/src/app.html
+++ b/src/app.html
@@ -1,32 +1,41 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
 
 <style>
-@font-face {
-	font-family: 'Roboto';
-	src: url('%sveltekit.assets%/fonts/Roboto-Regular.ttf') format('embedded-opentype'),
-      /* Internet Explorer */
-      url('%sveltekit.assets%/fonts/Roboto-Regular.ttf') format('woff2'),
-      /* Super Modern Browsers */
-      url('%sveltekit.assets%/fonts/Roboto-Regular.ttf') format('woff'),
-      /* Pretty Modern Browsers */
-      url('%sveltekit.assets%/fonts/Roboto-Regular.ttf') format('truetype'),
-      /* Safari, Android, iOS */
-      url('%sveltekit.assets%/fonts/Roboto-Regular.ttf') format('svg');
-    /* Legacy iOS */
-}
-body{
+	@font-face {
+		font-family: 'Roboto';
+		src: url('%sveltekit.assets%/fonts/Roboto-Regular.ttf') format('embedded-opentype'),
+			/* Internet Explorer */
+			url('%sveltekit.assets%/fonts/Roboto-Regular.ttf') format('woff2'),
+			/* Super Modern Browsers */
+			url('%sveltekit.assets%/fonts/Roboto-Regular.ttf') format('woff'),
+			/* Pretty Modern Browsers */
+			url('%sveltekit.assets%/fonts/Roboto-Regular.ttf') format('truetype'),
+			/* Safari, Android, iOS */
+			url('%sveltekit.assets%/fonts/Roboto-Regular.ttf') format('svg');
+		/* Legacy iOS */
+	}
 
-	font-family: "Roboto";
-}
+	body {
+
+		font-family: "Roboto";
+	}
+
+	body {
+		background-size: 40px 40px;
+		background-image: radial-gradient(circle, #ffffff67 1px, rgba(0, 0, 0, 0) 1px);
+	}
 </style>
